action and heuristic interface

--- a/FourInALine.vcxproj
+++ b/FourInALine.vcxproj
@@ -11,15 +11,25 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="action\Action.h" />
+    <ClInclude Include="heuristic\Heuristic.h" />
+    <ClInclude Include="model\ChessBoard.h" />
     <ClInclude Include="model\ChessMan.h" />
     <ClInclude Include="model\ChessMen.h" />
     <ClInclude Include="model\Coordinater.h" />
+    <ClInclude Include="model\State.h" />
+    <ClInclude Include="solution\Minimax.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="4InLine.cpp" />
+    <ClCompile Include="action\Action.cpp" />
+    <ClCompile Include="heuristic\Heuristic.cpp" />
+    <ClCompile Include="model\ChessBoard.cpp" />
     <ClCompile Include="model\ChessMan.cpp" />
     <ClCompile Include="model\ChessMen.cpp" />
     <ClCompile Include="model\Coordinater.cpp" />
+    <ClCompile Include="model\State.cpp" />
+    <ClCompile Include="solution\4InLine.cpp" />
+    <ClCompile Include="solution\Minimax.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{21AC6C95-C94B-4682-BE1C-9229162E2741}</ProjectGuid>
