--- a/.gitignore
+++ b/.gitignore
@@ -165,6 +165,12 @@ UpgradeLog*.htm
 App_Data/*.mdf
 App_Data/*.ldf
 
+FourInALine.sln
+FourInALine.vcxproj
+FourInALine.vcxproj.filters
+Output-Build.txt
+Resource.rc
+
 #############
 ## Windows detritus
 #############
