--- a/FourInALine.vcxproj
+++ b/FourInALine.vcxproj
@@ -72,8 +72,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\boost_1_55_0;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\boost_1_55_0\stage\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\SourceTree\boost_1_55_0;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\SourceTree\boost_1_55_0\stage\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
